deployments/chart/templates/auth-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    service: auth
  name: auth
spec:
  replicas: 1
  template:
    metadata:
      labels:
        service: auth
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: auth
        image: powerssl/auth:latest
        name: auth
        ports:
        - containerPort: 8080
        - containerPort: 9090
        restartPolicy: Always
        volumeMounts:
        - name: auth
          mountPath: /etc/powerssl/auth
          readOnly: true
      volumes:
      - name: auth
        secret:
          secretName: auth
