deployments/chart/templates/controller-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    service: controller
  name: controller
spec:
  replicas: 1
  template:
    metadata:
      labels:
        service: controller
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: controller
        image: powerssl/controller:latest
        name: controller
        ports:
        - containerPort: 8080
        - containerPort: 9090
        restartPolicy: Always
        livenessProbe:
          exec:
            command:
            - grpc_health_probe
            - -addr
            - 127.0.0.1:8080
            - -tls
            - -tls-no-verify=true
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          exec:
            command:
            - grpc_health_probe
            - -addr
            - 127.0.0.1:8080
            - -tls
            - -tls-no-verify=true
          initialDelaySeconds: 5
          periodSeconds: 5
