deployments/chart/templates/apiserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: apiserver
  name: apiserver
spec:
  ports:
  - name: "8443"
    port: 8443
    targetPort: 8080
  - name: "9090"
    port: 9090
    targetPort: 9090
  selector:
    service: apiserver
