deployments/chart/templates/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: auth
  name: auth
spec:
  ports:
  - name: "8081"
    port: 8081
    targetPort: 8080
  - name: "9090"
    port: 9090
    targetPort: 9090
  selector:
    service: auth
