deployments/chart/templates/controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: controller
  name: controller
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  - name: "9090"
    port: 9090
    targetPort: 9090
  selector:
    service: controller
