deployments/chart/templates/signer-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: signer
  name: signer
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  - name: "9090"
    port: 9090
    targetPort: 9090
  selector:
    service: signer
