deployments/chart/templates/vault-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: vault
  name: vault
spec:
  ports:
  - name: "8200"
    port: 8200
    targetPort: 8200
  selector:
    service: vault
