deployments/chart/templates/webapp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webapp
spec:
  rules:
  - host: app.test.powerssl.io
    http:
      paths:
      - backend:
          serviceName: webapp
          servicePort: 8080
